--- a/BasicContactListWithStreamAndCustomExtension.csproj
+++ b/BasicContactListWithStreamAndCustomExtension.csproj
@@ -9,5 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="ConsoleTables" Version="2.4.2" />
+    <PackageReference Include="Serilog" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
 </Project>
